add design navbar and navegation

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,49 @@
-<p>navbar works!</p>
+<nav class="navbar navbar-expand-lg bg-dark">
+  <div class="container">
+    <a class="navbar-brand text-info fw-bold" href="#">Navbar</a>
+    <button
+      class="navbar-toggler invert"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarText"
+      aria-controls="navbarText"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarText">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a
+            routerLink="/"
+            routerLinkActive="fw-bold"
+            [routerLinkActiveOptions]="{ exact: true }"
+            class="nav-link text-light"
+            aria-current="page"
+            href="#"
+            >Home</a
+          >
+        </li>
+        <li class="nav-item">
+          <a
+            routerLink="nosotros"
+            routerLinkActive="fw-bold"
+            class="nav-link text-light"
+            href="#"
+            >Nosotros</a
+          >
+        </li>
+        <li class="nav-item">
+          <a
+            routerLink="contacto"
+            routerLinkActive="fw-bold"
+            class="nav-link text-light"
+            href="#"
+            >Contacto</a
+          >
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
