add basic design home

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,10 @@
-<p>home works!</p>
+<div>
+  <h1 class="mt-4 fs-4 text-center">
+    Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+  </h1>
+  <img
+    class="img-fluid"
+    src="https://economipedia.com/wp-content/uploads/Economia-de-la-empresa.jpg"
+    alt=""
+  />
+</div>
