add design vision and mision

--- a/src/app/components/mision/mision.component.html
+++ b/src/app/components/mision/mision.component.html
@@ -1,1 +1,17 @@
-<p>mision works!</p>
+<div>
+  <h3>MISION</h3>
+  <p class="fw-semibold">
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis saepe fugit
+    maiores libero beatae a modi molestias nulla earum pariatur iusto blanditiis
+    accusantium in consequatur, non voluptates possimus necessitatibus
+    voluptate.
+  </p>
+  <div class="d-flex justify-content-center pt-3">
+    <img
+      class="img-fluid"
+      src="https://img.freepik.com/vector-gratis/ilustracion-concepto-mision-empresarial_114360-7295.jpg?w=2000"
+      alt=""
+      style="width: 300px"
+    />
+  </div>
+</div>
