--- a/src/app/components/vision/vision.component.html
+++ b/src/app/components/vision/vision.component.html
@@ -1,1 +1,17 @@
-<p>vision works!</p>
+<div>
+  <h3>VISION</h3>
+  <p class="fw-semibold">
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis saepe fugit
+    maiores libero beatae a modi molestias nulla earum pariatur iusto blanditiis
+    accusantium in consequatur, non voluptates possimus necessitatibus
+    voluptate.
+  </p>
+  <div class="d-flex justify-content-center pt-3">
+    <img
+      class="img-fluid"
+      src="https://thumbs.dreamstime.com/b/d-gente-hombre-persona-con-la-muestra-direccional-y-visi%C3%B3n-de-la-palabra-vision-30072317.jpg"
+      alt=""
+      style="width: 300px"
+    />
+  </div>
+</div>
